fixed year in same line and improved button visibility

--- a/src/styles/sections/hero/hero.scss
+++ b/src/styles/sections/hero/hero.scss
@@ -178,21 +178,21 @@ $hero-max-height: 900px;
 
     &__hackers {
       text-align: left;
+      padding:0px 10px 0px 10px;
     }
 
     &__date {
-      margin-left: 20px;
+      padding:0px 10px 0px 10px;
       text-align: center;
     }
 
     &__year {
-      margin-top: 25px;
-      margin-left: -20px;
-      font-size: 80%;
+      padding:0px 10px 0px 10px;
     }
 
     &__duration {
       text-align: right;
+      padding:0px 10px 0px 10px;
     }
   }
 
